<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assistant</string>
    <string name="action_settings">Setting</string>
    <string name="label">Query area</string>
    <string name="using_network">Use network</string>
    <string name="without_using_network">[Donot use network]</string>
    <string name="search">Search</string>
    <string name="loading">[Finding]</string>
    <string name="input_phone_number">[Input phone number]</string>
    <string name="input_name">[Input name]</string>
    <string name="local">Local</string>
    <string name="remote">Network</string>
    <string name="area">area</string>
    <string name="none_area">[None area]</string>
    <string name="action_save">Save</string>
    <string name="action_about">About</string>
    <string name="setting_show_area_title">Show setting</string>
    <string name="setting_show_area">Area setting</string>
    <string name="setting_query_title">Query setting</string>
    <string name="setting_show_area_call_out">Call out show area</string>
    <string name="setting_show_area_call_in">Call in show area</string>
    <string name="setting_show_area_call_in_summary">Show area when call incoming</string>
    <string name="setting_show_area_call_out_summary">Show area when call outing</string>
    <string name="setting_using_network_summary">Use network when query area</string>
    <string name="about_summary">Query area、Intercept call and sms, By KangLin&lt;kl222@126.com&gt;</string>
    <string name="title_activity_firewall_setting">Firewall setting</string>
    <string name="firewallsetting">Firewall setting</string>
    <string name="open_firewall">Open firewall</string>
    <string name="close_firewall">Close firewall</string>
    <string name="ok">Ok</string>
    <string name="update_success_locale">Update success locale</string>
    <string name="update_faile_locale">Update faile locale</string>
    <string name="whitelist">whitelist</string>
    <string name="set">set</string>
    <string name="numbers_in_whitelist">numbers in whitelist</string>
    <string name="blacklist">blacklist</string>
    <string name="numbers_in_blacklist">numbers in blacklist</string>
    <string name="brocker_phone_log">Intercept phone log</string>
    <string name="numbers_brocker_phone_log">Numbers Intercept phone log</string>
    <string name="brocker_sms_log">Intercept sms log</string>
    <string name="numbers_brocker_sms_log">number Intercept sms log</string>
    <string name="title_activity_brocker_list">Intercept List</string>
    <string name="from_contact">From contact</string>
    <string name="from_call_records">From call records</string>
    <string name="Name">Name</string>
    <string name="intercept_phone">Intercept phone</string>
    <string name="intercept_sms">Intercept SMS</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="brower">Brower</string>
    <string name="title_activity_brocker_phone_log">Intercept Phone Log</string>
    <string name="title_activity_brocker_sms_log">Intercept Sms Log</string>
    <string name="title_activity_brocker_sms_key_word_list">Intercept sms key word list</string>
    <string name="phone">Phone</string>
    <string name="sms">SMS</string>
    <string name="brocker_sms_keyword_whitelist">SMS keyword whitelist</string>
    <string name="brocker_sms_keyword_blacklist">SMS keyword blacklist</string>
    <string name="input_keyword">[Input keyword]</string>
    <string name="title_activity_brocker_sms_log_detailed">Interception Sms Log Detailed</string>
    <string name="title_activity_brocker_list_call">Call list</string>
    <string name="title_activity_assistant_main">Android ssistant</string>
    <string name="query_area">Query area</string>
    <string name="outgoing_type">outgoing</string>
    <string name="incoming_type">incoming</string>
    <string name="title_activity_intercept_mode">Intercept Mode</string>
    <string name="intercept_type">Intercept type</string>
    <string name="intercept_type_no">No intercept</string>
    <string name="intercept_type_normal">"Normal Intercept "</string>
    <string name="intercept_type_prompt">Intercept prompt</string>
    <string name="intercept_direction">Intercept direction</string>
    <string name="intercept_direction_incoming">Intercept incoming</string>
    <string name="intercept_direction_outgoing">Intercept outgoing</string>
    <string name="intercept_direction_double_side">Intercept double side</string>
    <string name="intercept_condition">Intercept condition</string>
    <string name="intercept_condition_normal">Whitelist and blacklist</string>
    <string name="intercept_condition_no_contact">Whitelist、blacklist and no contact</string>
    <string name="title_activity_activity_locale_gps">Gps locale</string> 
    <string name="gps_is_ok">Gps is ok</string>
    <string name="please_open_gps">Please open gps</string>
    <string name="position_has_changed">Position has changed</string>
    <string name="Unable_to_get_geographic_information">Unable to get geographic information</string>
    <string name="gps_is_disabled">Gps is disabled</string>
    <string name="gps_is_enabled">Gps is enabled</string>
    <string name="provider_changed">Provider changed</string>
    <string name="accuracy">Accuracy:</string>
    <string name="meters"> M</string>
    <string name="meters_second"> M/S</string>
    <string name="degrees"> degrees</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="bearing">Bearing:</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="systime">System time：</string>
    <string name="gpstime">Gps time：</string>
    <string name="satellite_number">Satellite number:</string>
    <string name="time">time</string>
    <string name="minTime">The minimum time interval(unit:s):</string>
    <string name="minDistance">Minimum distance(unit:m):</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="use_network_provider">Network provider</string>
</resources>