<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:enabled="false"
        android:orderInCategory="102"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_service_update"
        android:orderInCategory="103"
        android:title="@string/action_service_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="104"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>