<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BrockerListActivity" >

    <ListView
        android:id="@+id/lstBrockerlistView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBrocklistlinerlayoutedit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/llBrocklistlinerlayoutedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnBrockerlistContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <EditText
            android:id="@+id/edtBrockerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtBrockerNumber"
            android:layout_weight="1"
            android:hint="@string/input_name" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edtBrockerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnBrocklistAdd"
            android:layout_toRightOf="@id/edtBrockerName"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_phone_number" />

        <Button
            android:id="@+id/btnBrocklistAdd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtBrockerNumber"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:onClick="onAdd"
            android:text="@string/add" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnBrockerlistContact"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onFromContact"
        android:text="@string/from_contact" />

    <Button
        android:id="@+id/btnBrocklistFromCallRecords"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="14dp"
        android:onClick="onFromCallRecords"
        android:text="@string/from_call_records" />

</RelativeLayout>