<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtBrockerListViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtBrockerListViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="number" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/cbBrockerListViewPhoneEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/cbBrockerListViewSMSEnable"
            android:hint="@string/phone"
            android:text="@string/phone" />

        <CheckBox
            android:id="@+id/cbBrockerListViewSMSEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnBrockerListViewDelete"
            android:hint="@string/sms"
            android:text="@string/sms" />

        <Button
            android:id="@+id/btnBrockerListViewDelete"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:text="@string/delete" />

    </RelativeLayout>

</LinearLayout>
